# DX11_Test

./: DX11_Text.sln  README.md
3part/freetype-2.4.4/CEGUI-BUILD/: CMakeLists.txt  cmake_install.cmake  freetype.vcxproj  freetype_static.vcxproj  freetype_static.vcxproj.filters
3part/freetype-2.4.4/CEGUI-BUILD/freetype.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.read.1.tlog  freetype.lastbuildstate  freetype.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
3part/freetype-2.4.4/CEGUI-BUILD/freetype.dir/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  freetype.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
3part/freetype-2.4.4/CEGUI-BUILD/freetype_static.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog  freetype_d.lib  lib.command.1.tlog
3part/freetype-2.4.4/CEGUI-BUILD/freetype_static.dir/Release/: CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  freetype_static.lastbuildstate  lib.command.1.tlog
DX11_Text/: DX11_Text.aps  DX11_Text.cpp  DX11_Text.rc  DX11_Text.vcxproj  DX11_Text.vcxproj.filters  ReadMe.txt  Resource.h  stdafx.cpp
DX11_Text/Debug/: CL.read.1.tlog  CL.write.1.tlog  DX11_Text.lastbuildstate  DX11_Text.res  DX11_Text.write.1.tlog  FXC.command.1.tlog  cl.command.1.tlog  fxc.read.1.tlog  fxc.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc110.idb
DX11_Text/Demo/: DX113DBase.cpp  DX113DBase.h  DX11Base.cpp  DX11Base.h  DX11CubeDemo.cpp  DX11CubeDemo.h  DX11CubeEffectDemo.cpp  DX11CubeEffectDemo.h  DX11Demo.cpp  DX11Demo.h  DX11FontDemo.cpp  DX11FontDemo.h  DX11FreeTypeFontDemo.cpp  DX11FreeTypeFontDemo.h  DX11MapDemo.cpp  DX11MapDemo.h  DX11ModelDemo.cpp  DX11ModelDemo.h  DX11NormalMappingDemo.cpp  DX11NormalMappingDemo.h  DX11SpriteDemo.cpp  DX11SpriteDemo.h  DX11TexDemo.cpp  DX11TexDemo.h
DX11_Text/Demo/ModulDemo/: DX11CubeDemo.cpp  DX11CubeDemo.h  DX11CubeEffectDemo.cpp  DX11CubeEffectDemo.h  DX11ModelDemo.cpp  DX11ModelDemo.h
DX11_Text/Demo/ShaderDemo/: DX11Light.cpp  DX11Light.h  DX11NormalMappingDemo.cpp  DX11NormalMappingDemo.h
DX11_Text/Demo/TexDemo/: DX11FontDemo.cpp  DX11FontDemo.h  DX11FreeTypeFontDemo.cpp  DX11FreeTypeFontDemo.h  DX11MapDemo.cpp  DX11MapDemo.h  DX11SpriteDemo.cpp  DX11SpriteDemo.h  DX11TexDemo.cpp  DX11TexDemo.h
DX11_Text/ResourceProvider/: mtlLoader.cpp  mtlLoader.h  objLoader.cpp  objLoader.h  objModel.cpp  objModel.h
DX11_Text/Shader/: DX11CubeDemo.fx  DX11Demo.fx  DX11ModelDemo.fx
DX11_Text/img/: bound.dds  head.dds  sprite.dds
Debug/: DX11_Text.ilk  VertexShader.cso
Resources/Shader/: DX11Light.fx
Resources/img/: env.dds  heart.dds  num.dds  tex.dds
Resources/shader/: DX11CubeDemo.fx  DX11CubeEffectDemo.fx  DX11LightDirection.fx  DX11LightPoint.fx  DX11MapDemo.fx  DX11ModelDemo.fx  DX11SpriteDemo.fx
